--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Lesson11</title>
+        <title>Orange Rabbit</title>        
+        <link rel="icon" href="orange-rabbit.png">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
@@ -16,7 +17,7 @@
             </div>
             <nav>
                 <div class="item">
-                    <div class="icon"><img src="contact.png"></div>
+                    <div class="icon contact"><img src="contact.png"></div>
                     <div class="icon-txt">contact</div>
                 </div>
                 <div class="item">
@@ -72,12 +73,12 @@
                         <div class="about">Hoof is our most talanted designer. However he's not the talkative type and I would advise not getting on the wrong side of him. </div>
                     </div>
                     <div class="team-member">
-                        <div class="name">Nibs</div><div class="position">-CEO/Director</div>
+                        <div class="name">Nibs</div><div class="position">- CEO/Director</div>
                         <div><img src="nibs.png"  class="photo"></div>
                         <div class="about">Nibs is our go to woman. She's the ceo/director of orange rabbits and runs fast when she has too.</div>
                     </div>
                     <div class="team-member">
-                        <div class="name">Squawk</div><div class="position">-Developer</div>
+                        <div class="name">Squawk</div><div class="position">- Developer</div>
                         <div><img src="squawk.png"  class="photo"></div>
                         <div class="about">Squawk is no social bunny. But when it comes to programming he stands out from the crowd.</div>
                     </div>
@@ -92,13 +93,13 @@
                 </div>
                 <div>
                     <label for="email-field">Email:</label>
-                    <input type="text" id="email-field" class="text-field">
+                    <input type="email" id="email-field" class="text-field">
                 </div>
                 <div>
                     <label for="message-field">Message:</label>
                     <input type="text" id="message-field" class="text-field">
                 </div>
-                <div><input type="submit" value="Submit" class="button"></div>
+                <div><button>Submit</button></div>
             </section>
         </main>
         <footer>
